# macoutlook

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  example_usage.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/analysis/: 2026-03-14-design-pattern-analysis.md  2026-03-14-performance-review.md  2026-03-14-user-flow-analysis.md
docs/brainstorms/: 2026-03-14-full-content-extraction-brainstorm.md
docs/mentoring/: lessons-learned.md
docs/plans/: 2026-03-14-feat-macoutlook-full-content-extraction-plan.md  v0.3.0-architecture-plan.md
docs/research/: 2026-03-14-refactor-research.md  python-email-stdlib-research.py  python-library-best-practices-2026.md
docs/reviews/: 2026-03-14-architecture-review.md  2026-03-14-security-review.md  2026-03-14-simplification-analysis.md
docs/solutions/build-errors/: ci-precommit-uv-dependency-groups.md
scripts/: benchmark.py  check-git-author.sh
src/macoutlook/: __init__.py  exceptions.py  search.py
src/macoutlook/cli/: main.py
src/macoutlook/core/: calendar_repository.py  client.py  database.py  email_repository.py  enricher.py  message_source.py  protocols.py
src/macoutlook/models/: calendar.py  email_message.py  enums.py
src/macoutlook/parsers/: content.py  icalendar.py
src/pyoutlook_db/: __init__.py
src/pyoutlook_db/cli/: main.py
src/pyoutlook_db/core/: client.py  database.py  exceptions.py
src/pyoutlook_db/models/: calendar.py  email.py
src/pyoutlook_db/parsers/: content.py  icalendar.py
tests/unit/: test_calendar_repository.py  test_client.py  test_content_parser.py  test_database.py  test_email_repository.py  test_enricher.py  test_exceptions.py  test_icalendar.py  test_message_source.py  test_models.py  test_search.py
