[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyoutlook-db"
dynamic = ["version"]
description = "Python library for accessing Microsoft Outlook SQLite database on macOS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Amazon Q Developer", email = "noreply@amazon.com"}
]
keywords = ["outlook", "sqlite", "email", "calendar", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "structlog>=23.0.0",
    "icalendar>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.4.0",
]
analytics = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/amazon-q-developer/pyoutlook-db"
Documentation = "https://pyoutlook-db.readthedocs.io"
Repository = "https://github.com/amazon-q-developer/pyoutlook-db"
Issues = "https://github.com/amazon-q-developer/pyoutlook-db/issues"

[project.scripts]
pyoutlook-db = "pyoutlook_db.cli.main:cli"

[tool.hatch.version]
path = "src/pyoutlook_db/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyoutlook_db"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "S",    # bandit security
    "N",    # pep8-naming
    "D",    # pydocstyle
]

ignore = [
    "E501",  # Line too long (let ruff format handle it)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports
"tests/*" = ["S101", "D"]  # Allow assert statements and skip docstrings in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/pyoutlook_db",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "macos: marks tests that require macOS",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
