[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macoutlook"
dynamic = ["version"]
description = "Python library for extracting email and calendar data from macOS Outlook"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Andy Taylor"}
]
keywords = ["outlook", "sqlite", "email", "calendar", "macos", "mime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "icalendar>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Repository = "https://github.com/taylaand/macoutlook"
Issues = "https://github.com/taylaand/macoutlook/issues"

[project.scripts]
macoutlook = "macoutlook.cli.main:cli"

[tool.hatch.version]
path = "src/macoutlook/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/macoutlook"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "S",    # bandit security
    "N",    # pep8-naming
]

ignore = [
    "E501",  # Line too long (let ruff format handle it)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "D"]

[tool.ruff.lint.isort]
known-first-party = ["macoutlook"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["icalendar.*", "markdownify.*", "bs4.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]

markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "macos: marks tests that require macOS",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
